--- a/index.html
+++ b/index.html
@@ -10,6 +10,67 @@
 <h1>Test</h1>
 
 <p>website coming soon</p>
+  
+<h2 style="text-align: center;"><em>I Am For&#8230;</em> (Statement, 1961)</h2>
+<div class="unindented">
+<p>I am for an art that is political-erotical-mystical, that does something other than sit on its ass in a museum.<br />
+I am for an art that grows up not knowing it is art at all, an art given the chance of having a starting point of zero.<br />
+I am for an art that embroils itself with the everyday crap and still comes out on top.<br />
+I am for an art that imitates the human, that is comic, if necessary, or violent, or whatever is necessary.<br />
+I am for all art that takes its form from the lines of life itself, that twists and extends and accumulates and spits and drips, and is heavy and coarse and blunt and sweet and stupid as life itself.</p>
+
+<p>I am for an artist who vanishes, turning up in a white cap painting signs or hallways.</p>
+<p>I am for art that comes out of a chimney like black hair and scatters in the sky.<br />
+I am for art that spills out of an old man’s purse when he is bounced off a passing fender.<br />
+I am for the art out of a doggie’s mouth, falling five stories from the roof.<br />
+I am for the art that a kid licks, after peeling away the wrapper.<br />
+I am for an art that joggles like everyone’s knees, when the bus traverses an excavation.<br />
+I am for art that is smoked like a cigarette, smells like a pair of shoes.<br />
+I am for art that flaps like a flag, or helps blow noses like a handkerchief.<br />
+I am for art that is put on and taken off like pants, which develops holes like socks, which is eaten like a piece of pie, or abandoned with great contempt like a piece of shit.</p>
+
+<p>I am for art covered with bandages. I am for art that limps and rolls and runs and jumps.<br />
+I am for art that comes in a can or washes up on the shore.<br />
+I am for art that coils and grunts like a wrestler. I am for art that sheds hair.<br />
+I am for art you can sit on. I am for art you can pick your nose with or stub your toes on.<br />
+I am for art from a pocket, from deep channels of the ear, from the edge of a knife, from the corners of the mouth, stuck in the eye or worn on the wrist.<br />
+I am for art under the skirts, and the art of pinching cockroaches.</p>
+
+<p>I am for the art of conversation between the sidewalk and a blind man’s metal stick.<br />
+I am for the art that grows in a pot, that comes down out of the skies at night, like lightning, that hides in the clouds and growls. I am for art that is flipped on and off with a switch.<br />
+I am for art that unfolds like a map, that you can squeeze, like your sweetie’s arm, or kiss like a pet dog. Which expands and squeaks like an accordion, which you can spill your dinner on like an old tablecloth.<br />
+I am for an art that you can hammer with, stitch with, sew with, paste with, file with.<br />
+I am for an art that tells you the time of day, or where such and such a street is.<br />
+I am for an art that helps old ladies across the street.</p>
+</div>
+<div class="unindented">
+<p>I am for the art of the washing machine. I am for the art of a government check. I am for the art of last war’s raincoat.<br />
+I am for the art that comes up in fogs from sewer holes in winter. I am for the art that splits when you step on a frozen puddle. I am for the worm’s art inside the apple. I am for the art of sweat that develops between crossed legs.</p>
+<p>I am for the art of neck hair and caked teacups, for the art between the tines of restaurant forks, for the odor of boiling dishwater.<br />
+I am for the art of sailing on Sunday, and the art of red-and-white gasoline pumps.<br />
+I am for the art of bright blue factory columns and blinking biscuit signs.<br />
+I am for the art of cheap plaster and enamel. I am for the art of worn marble and smashed slate. I am for the art of rolling cobblestones and sliding sand. I am for the art of slag and black coal. I am for the art of dead birds.<br />
+I am for the art of scratching in the asphalt, daubing at the walls. I am for the art of bending and kicking metal and breaking glass, and pulling at things to make them fall down.</p>
+<p>I am for the art of punching and skinned knees and sat-on bananas. I am for the art of kids’ smells. I am for the art of mama-babble.<br />
+I am for the art of bar-babble, tooth-picking, beer-drinking, egg-salting, in-sulting. I am for the art of falling off a barstool.</p>
+<p>I am for the art of underwear and the art of taxicabs. I am for the art of ice-cream cones dropped on concrete. I am for the majestic art of dog turds, rising like cathedrals.</p>
+</div>
+<div class="unindented">
+<p>I am for the blinking arts, lighting up the night. I am for art falling, splashing, wiggling, jumping, going on and off.<br />
+I am for the art of fat truck tires and black eyes.<br />
+I am for Kool art, 7UP art, Pepsi art, Sunshine art, 39 cents art, 15 cents art, Vatronol art, Dro-bomb art, Vam art, Menthol art, L&amp;M art, Ex-lax art, Venida art, Heaven Hill art, Pamryl art, San-o-med art, Rx art, 9.99 art, Now art, New art, How art, Fire Sale art, Last Chance art, Only art, Diamond art, Tomorrow art, Franks art, Ducks art, Meat-o-rama art.
+<p>I am for the art of bread wet by rain. I am for the rat’s dance between floors. I am for the art of flies walking on a slick pear in the electric light. I am for the art of soggy onions and firm green shoots. I am for the art of clicking among the nuts when the roaches come and go. I am for the brown sad art of rotting apples.<br />
+I am for the art of meows and clatter of cats and for the art of their dumb electric eyes.<br />
+I am for the white art of refrigerators and their muscular openings and closings.<br />
+I am for the art of rust and mold. I am for the art of hearts, funeral hearts or sweetheart hearts, full of nougat. I am for the art of worn meat hooks and singing barrels of red, white, blue, and yellow meat.<br />
+I am for the art of things lost or thrown away, coming home from school. I am for the art of cock-and-ball trees and flying cows and the noise of rectangles and squares. I am for the art of crayons and weak, gray pencil lead, and grainy wash and sticky oil paint, and the art of windshield wipers and the art of the finger on a cold window, on dusty steel or in the bubbles on the sides of a bathtub.<br />
+I am for the art of teddy bears and guns and decapitated rabbits, exploded umbrellas, raped beds, chairs with their brown bones broken, burning trees, firecracker ends, chicken bones, pigeon bones, and boxes with men sleeping in them.</p>
+I am for the art of slightly rotten funeral flowers, hung bloody rabbits and wrinkly yellow chickens, bass drums and tambourines, and plastic phonographs.<br />
+I am for the art of abandoned boxes, tied like pharaohs. I am for an art of water tanks and speeding clouds and flapping shades.<br />
+I am for US Government Inspected Art, Grade A art, Regular Price art, Yellow Ripe art, Extra Fancy art, Ready-to-Eat art, Best-for-Less art, Ready-to-Cook art, Fully Cleaned art, Spend Less art, Eat Better art, Ham art, pork art, chicken art, tomato art, banana art, apple art, turkey art, cake art, cookie art&#8230;</p>
+</div>
+<hr />
+<p>Reprinted courtesy Claes Oldenburg</p>
 
 </body>
 </html>
