--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
-<head>
 
-<!-- Link to your stylesheet here -->
 
-</head>
-<html>
-<body>
+<h1>Test Julian Rosenfelt Manifesto, 2015: Pop Art </h1>
 
-<h1>Test</h1>
-
-<p>website coming soon</p>
+<p>Website Coming Soon</p>
   
-<h2 style="text-align: center;"><em>I Am For&#8230;</em> (Statement, 1961)</h2>
+<h2 style="text-align: left; Franklin Gothic"</h2>  
 <div class="unindented">
 <p>I am for an art that is political-erotical-mystical, that does something other than sit on its ass in a museum.<br />
 I am for an art that grows up not knowing it is art at all, an art given the chance of having a starting point of zero.<br />
@@ -42,8 +36,7 @@ I am for art that unfolds like a map, that you can squeeze, like your sweetie’
 I am for an art that you can hammer with, stitch with, sew with, paste with, file with.<br />
 I am for an art that tells you the time of day, or where such and such a street is.<br />
 I am for an art that helps old ladies across the street.</p>
-</div>
-<div class="unindented">
+
 <p>I am for the art of the washing machine. I am for the art of a government check. I am for the art of last war’s raincoat.<br />
 I am for the art that comes up in fogs from sewer holes in winter. I am for the art that splits when you step on a frozen puddle. I am for the worm’s art inside the apple. I am for the art of sweat that develops between crossed legs.</p>
 <p>I am for the art of neck hair and caked teacups, for the art between the tines of restaurant forks, for the odor of boiling dishwater.<br />
@@ -58,7 +51,7 @@ I am for the art of bar-babble, tooth-picking, beer-drinking, egg-salting, in-su
 <div class="unindented">
 <p>I am for the blinking arts, lighting up the night. I am for art falling, splashing, wiggling, jumping, going on and off.<br />
 I am for the art of fat truck tires and black eyes.<br />
-I am for Kool art, 7UP art, Pepsi art, Sunshine art, 39 cents art, 15 cents art, Vatronol art, Dro-bomb art, Vam art, Menthol art, L&amp;M art, Ex-lax art, Venida art, Heaven Hill art, Pamryl art, San-o-med art, Rx art, 9.99 art, Now art, New art, How art, Fire Sale art, Last Chance art, Only art, Diamond art, Tomorrow art, Franks art, Ducks art, Meat-o-rama art.
+I am for Kool art, 7UP art, Pepsi art, Sunshine art, 39 cents art, 15 cents art, Vatronol art, Dro-bomb art, Vam art, Menthol art,M  art, Ex-lax art, Venida art, Heaven Hill art, Pamryl art, San-o-med art, Rx art, 9.99 art, Now art, New art, How art, Fire Sale art, Last Chance art, Only art, Diamond art, Tomorrow art, Franks art, Ducks art, Meat-o-rama art.
 <p>I am for the art of bread wet by rain. I am for the rat’s dance between floors. I am for the art of flies walking on a slick pear in the electric light. I am for the art of soggy onions and firm green shoots. I am for the art of clicking among the nuts when the roaches come and go. I am for the brown sad art of rotting apples.<br />
 I am for the art of meows and clatter of cats and for the art of their dumb electric eyes.<br />
 I am for the white art of refrigerators and their muscular openings and closings.<br />
@@ -70,7 +63,7 @@ I am for the art of abandoned boxes, tied like pharaohs. I am for an art of wate
 I am for US Government Inspected Art, Grade A art, Regular Price art, Yellow Ripe art, Extra Fancy art, Ready-to-Eat art, Best-for-Less art, Ready-to-Cook art, Fully Cleaned art, Spend Less art, Eat Better art, Ham art, pork art, chicken art, tomato art, banana art, apple art, turkey art, cake art, cookie art&#8230;</p>
 </div>
 <hr />
-<p>Reprinted courtesy Claes Oldenburg</p>
+<p>Claes Oldenburg, 1961 I Am For Art</p>
 
 </body>
 </html>
