--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 
+<h1 style="font-family:franklin gothic heavy;">This is a heading</h1>
+<p style="font-family:franklin gothic book;">This is a paragraph.</p>
+<p style="color:#0000ff">This is a heading</h1>
+<p style="color:#595959">This is a paragraph.</p>
 
 <h1>Test Julian Rosenfelt Manifesto, 2015: Pop Art </h1>
 
-<p>Website Coming Soon</p>
+<h1>Website Coming Soon</h1>
   
-<h2 style="text-align: left; Franklin Gothic"</h2>  
 <div class="unindented">
 <p>I am for an art that is political-erotical-mystical, that does something other than sit on its ass in a museum.<br />
 I am for an art that grows up not knowing it is art at all, an art given the chance of having a starting point of zero.<br />
@@ -22,21 +25,24 @@ I am for an art that joggles like everyone’s knees, when the bus traverses an 
 I am for art that is smoked like a cigarette, smells like a pair of shoes.<br />
 I am for art that flaps like a flag, or helps blow noses like a handkerchief.<br />
 I am for art that is put on and taken off like pants, which develops holes like socks, which is eaten like a piece of pie, or abandoned with great contempt like a piece of shit.</p>
-
+</div>
+<div class="unindented">
 <p>I am for art covered with bandages. I am for art that limps and rolls and runs and jumps.<br />
 I am for art that comes in a can or washes up on the shore.<br />
 I am for art that coils and grunts like a wrestler. I am for art that sheds hair.<br />
 I am for art you can sit on. I am for art you can pick your nose with or stub your toes on.<br />
 I am for art from a pocket, from deep channels of the ear, from the edge of a knife, from the corners of the mouth, stuck in the eye or worn on the wrist.<br />
 I am for art under the skirts, and the art of pinching cockroaches.</p>
-
+</div>
+<div class="unindented">
 <p>I am for the art of conversation between the sidewalk and a blind man’s metal stick.<br />
 I am for the art that grows in a pot, that comes down out of the skies at night, like lightning, that hides in the clouds and growls. I am for art that is flipped on and off with a switch.<br />
 I am for art that unfolds like a map, that you can squeeze, like your sweetie’s arm, or kiss like a pet dog. Which expands and squeaks like an accordion, which you can spill your dinner on like an old tablecloth.<br />
 I am for an art that you can hammer with, stitch with, sew with, paste with, file with.<br />
 I am for an art that tells you the time of day, or where such and such a street is.<br />
 I am for an art that helps old ladies across the street.</p>
-
+</div>
+<div class="unindented">
 <p>I am for the art of the washing machine. I am for the art of a government check. I am for the art of last war’s raincoat.<br />
 I am for the art that comes up in fogs from sewer holes in winter. I am for the art that splits when you step on a frozen puddle. I am for the worm’s art inside the apple. I am for the art of sweat that develops between crossed legs.</p>
 <p>I am for the art of neck hair and caked teacups, for the art between the tines of restaurant forks, for the odor of boiling dishwater.<br />
