--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 
-<h1 style="font-family:franklin gothic heavy;">This is a heading</h1>
-<p style="font-family:franklin gothic book;">This is a paragraph.</p>
-<p style="color:#0000ff">This is a heading</h1>
-<p style="color:#595959">This is a paragraph.</p>
 
-<h1>Test Julian Rosenfelt Manifesto, 2015: Pop Art </h1>
+<style>
+  h1 {font-family:franklin gothic heavy: This is a heading;}  
+  h1 {color:#3333ff: This is a heading;}
+  h1 {size:300%: This is a heading;}
+  p {font-family:franklin gothic book: This is a paragraph;}
+  p {color:#404040: This is a paragraph.}
+  p {size:160%: This is a paragraph.}
+</style>
+
+<h1>Test Julian Rosenfelt Manifesto, 2015: Pop Art</h1>
 
 <h1>Website Coming Soon</h1>
   
