--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ I am for the art of scratching in the asphalt, daubing at the walls. I am for th
 <div class="unindented">
 <p>I am for the art of punching and skinned knees and sat-on bananas. I am for the art of kids’ smells. I am for the art of mama-babble.<br />
 I am for the art of bar-babble, tooth-picking, beer-drinking, egg-salting, in-sulting. I am for the art of falling off a barstool.<br />
-<p>I am for the art of underwear and the art of taxicabs. I am for the art of ice-cream cones dropped on concrete. I am for the majestic art of dog turds, rising like cathedrals.<br />
+I am for the art of underwear and the art of taxicabs. I am for the art of ice-cream cones dropped on concrete. I am for the majestic art of dog turds, rising like cathedrals.<br />
 I am for the blinking arts, lighting up the night. I am for art falling, splashing, wiggling, jumping, going on and off.<br />
 I am for the art of fat truck tires and black eyes.<br />
 I am for Kool art, 7UP art, Pepsi art, Sunshine art, 39 cents art, 15 cents art, Vatronol art, Dro-bomb art, Vam art, Menthol art,M  art, Ex-lax art, Venida art, Heaven Hill art, Pamryl art, San-o-med art, Rx art, 9.99 art, Now art, New art, How art, Fire Sale art, Last Chance art, Only art, Diamond art, Tomorrow art, Franks art, Ducks art, Meat-o-rama art.
@@ -82,8 +82,8 @@ I am for the art of teddy bears and guns and decapitated rabbits, exploded umbre
 I am for the art of abandoned boxes, tied like pharaohs. I am for an art of water tanks and speeding clouds and flapping shades.<br />
 I am for US Government Inspected Art, Grade A art, Regular Price art, Yellow Ripe art, Extra Fancy art, Ready-to-Eat art, Best-for-Less art, Ready-to-Cook art, Fully Cleaned art, Spend Less art, Eat Better art, Ham art, pork art, chicken art, tomato art, banana art, apple art, turkey art, cake art, cookie art&#8230;</p>
 </div>
-<hr />
-<p>Claes Oldenburg, 1961 I Am For Art</p>
+
+<p>Claes Oldenburg, 1961. I Am For Art&#8230;</p>
 
 </body>
 </html>
