--- a/index.html
+++ b/index.html
@@ -9,16 +9,12 @@
 
   <h1>Julian Rosenfelt Manifesto, 2015: Pop Art</h1>
     
-<div class="row">
-  <div class="column">
-    <img src="img_collge.jpg" alt="Collage" style="width:100%">
+  <div class="main-content">
+     <p><img src="img_collge.jpg" alt="Collage">
+</p>
   
 </div>
-
-<div class="row">
-  <div class="column" style="width:100%">
-
-</div>  
+ 
 
 <p>
     
